Mon, 25 May 1998 10:55:37 +0200 Paolo Molaro <lupus@debian.org>

	* gtkspell.[ch]: spell-check widget using ispell.

Sat May 25  1:58:00 1998  Cesar Miquel  <miquel@df.uba.ar>

	* gnome-about.c Applied a patch provided by Changwoo Ryu 
	<cwryu@adam.kaist.ac.kr> that makes the gnome_about_new's 
	"logo" argument more convenient to use. It:

 		1) Uses gdk_imlib.  Goodbye, xpm.
		2) Find the logo file in the pixmap 
		   directory (by gnome_pixmap_file).

Sat May 23 21:55:41 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.c (gnome_dialog_run_modal): Don't call set_modal,
	leave the dialog in the same state we came to it. Don't call
	close_hides, leave close behavior up to the caller. Connect a
	handler to the "close" signal which refuses to close the dialog
	unless a button has been clicked. Thus -1 will never be
	returned. Remove signal handlers when a button is clicked. Call
	gtk_main_quit() when a button is clicked to avoid piling up
	gtk_main's and cause the function to actually return. Call
	gtk_widget_show on the dialog if it has not yet been shown. Use a
	define instead of -1 for invalid button. 
	(gnome_dialog_set_modal): Make it work if the widget has already
	been shown.
	
	* gnome-dialog.h: Updated a couple of comments.
	(GnomeDialogButton): Removed unused typedef.


Fri May 22 23:26:11 1998  Tom Tromey  <tromey@cygnus.com>

	Some -Wall fixes:
	* ted_demo.c (main): Return 0.
	* gtkcalendar.c (gtk_calendar_header_button): Removed unused
	decl.
	* gtk-ted.c (gtk_ted_add): Removed unused variable.
	(parent_class): Removed.
	* gnome-client.c (gnome_client_new_without_connection): Removed
	unused variable.
	* gnome-about.c (gnome_about_repaint): Removed unused variable.
	(gnome_about_display_comments): Removed unused label.
	(gnome_fill_info): Removed unused variables.
	(gnome_about_new): Likewise.
	* gnome-net.c (net_socket_new): Removed unused variable.
	* gnome-init.c: Include gnome-preferences.h.